# Multi-Agent-Research-Summary-System

./: README.md  activate_venv.bat  app.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: researcher.py  writer.py
tools/: search_web.py  summarizer.py
workflow/: graph.py  state.py
